@@ -1,4 +1,9 @@
-/* $Id: ChangeLog 317 2005-08-11 22:32:32Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 325 2005-10-03 14:46:21Z knut.osmundsen@oracle.com $ */
+
+2005-10-03: bird
+    - src/kDepPre/kDepPre.c, kBuild/bin/x86.win32/kDepPre.exe:
+        o Fixed stupid stupid bug in the win32 case correcting code.
+          Rebuilt the win32 binary.
 
 2005-08-11: bird
     - kBuild/footer.kmk:
